CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/sfrosit_t_auth_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_auth_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_auth_hist</externalName>
    <label>Authorization History</label>
    <pluralLabel>Authorization History</pluralLabel>
</CustomObject>