CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/amt_actv_auth__c.field-meta.xml
<CustomField>
    <fullName>amt_actv_auth__c</fullName>
    <description>amt_actv_auth</description>
    <externalDeveloperName>amt_actv_auth</externalDeveloperName>
    <label>Authorization Activity Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>