CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/amt_transp_auth__c.field-meta.xml
<CustomField>
    <fullName>amt_transp_auth__c</fullName>
    <description>amt_transp_auth</description>
    <externalDeveloperName>amt_transp_auth</externalDeveloperName>
    <label>Authorization Transportation Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>