CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/cde_reason_tfr_provr__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_tfr_provr__c</fullName>
    <description>cde_reason_tfr_provr</description>
    <externalDeveloperName>cde_reason_tfr_provr</externalDeveloperName>
    <label>Reason code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>