CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/cde_rel_provr__c.field-meta.xml
<CustomField>
    <fullName>cde_rel_provr__c</fullName>
    <description>cde_rel_provr</description>
    <externalDeveloperName>cde_rel_provr</externalDeveloperName>
    <label>Provider&apos;s Loc/Relationship to Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>