CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/dte_end_effv_auth__c.field-meta.xml
<CustomField>
    <fullName>dte_end_effv_auth__c</fullName>
    <description>dte_end_effv_auth</description>
    <externalDeveloperName>dte_end_effv_auth</externalDeveloperName>
    <label>Autorization end Date</label>
    <type>Date</type>
</CustomField>