CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/idn_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_auth__c</fullName>
    <description>idn_auth</description>
    <externalDeveloperName>idn_auth</externalDeveloperName>
    <label>Auth ID</label>
    <length>50</length>
    <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_AUTH__c</referenceTo>
    <relationshipLabel>Authorization Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_auth_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>