CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/idn_auth_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_auth_hist__c</fullName>
    <description>idn_auth_hist</description>
    <externalDeveloperName>idn_auth_hist</externalDeveloperName>
    <label>History ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>