CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/idn_auth_tfr__c.field-meta.xml
<CustomField>
    <fullName>idn_auth_tfr__c</fullName>
    <description>idn_auth_tfr</description>
    <externalDeveloperName>idn_auth_tfr</externalDeveloperName>
    <label>Transfer auth iD</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>