CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/idn_client__c.field-meta.xml
<CustomField>
    <fullName>idn_client__c</fullName>
    <description>idn_client</description>
    <externalDeveloperName>idn_client</externalDeveloperName>
    <label>Client ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>