CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/idn_office__c.field-meta.xml
<CustomField>
    <fullName>idn_office__c</fullName>
    <description>idn_office</description>
    <externalDeveloperName>idn_office</externalDeveloperName>
    <label>office id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>