CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/ind_auth_addnl__c.field-meta.xml
<CustomField>
    <fullName>ind_auth_addnl__c</fullName>
    <description>ind_auth_addnl</description>
    <externalDeveloperName>ind_auth_addnl</externalDeveloperName>
    <label>Additional Auth Indicator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>