CHATS_SIT/force-app/main/default/objects/sfrosit_t_auth_hist__x/fields/ind_chk_fees_parent__c.field-meta.xml
<CustomField>
    <fullName>ind_chk_fees_parent__c</fullName>
    <description>ind_chk_fees_parent</description>
    <externalDeveloperName>ind_chk_fees_parent</externalDeveloperName>
    <label>Parent Check Fee</label>
    <length>1</length>
    <type>Text</type>
</CustomField>